# rocketsd

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  config.emitter.json  config.json  config.receiver.json  id_head.h.pc  id_tail.h.pc  protocol.xml  requirements.txt  xmlprotoc.py
.github/workflows/: build-package.yml  build-test.yml  build.yml  package.yml
doc/visual-studio-windows/: README.md
inc/: app.h  bullshiter.h  cute_deserializer.h  deserializer.h  influx_deserializer.h  log.h  protocol.h  protocol_parser.h  util.h
inc/clients/: client.h  client_factory.h  cute_client.h  influx_client.h
inc/modules/: curse_logstream.h  curse_module.h  curse_window.h  cute_module.h  fake_module.h  influx_module.h  module.h  module_factory.h  serial_module.h
inc/producers/: fake_producer.h  producer.h  producer_factory.h  serial_producer.h
inc/proto/: packet.h
libs/: CMakeLists.txt
proto/: packet.proto
src/: CMakeLists.txt  app.cc  bullshiter.cc  cute_deserializer.cc  deserializer.cc  influx_deserializer.cc  log.cc  main.cc  protocol.cc  protocol_parser.cc  util.cc
src/checksum/: CMakeLists.txt  main.cc
src/clients/: client.cc  client_factory.cc  cute_client.cc  influx_client.cc
src/cute/proto/: CMakeLists.txt  delimited_protobuf_stream.hh  packet.cc  packet.hh  packet.proto
src/cute/proto/tests/: main.cc  test_packet.cc  test_stream.cc
src/log/: CMakeLists.txt  log.hh  ostream_logsink.cc
src/log/inc/log/: log.hh  ostream_logsink.hh
src/log/src/: log.cc  ostream_logsink.cc
src/module/: CMakeLists.txt
src/module/inc/module/: module.hh  module_factory.hh
src/module/src/: curse_module.hh  cute_module.cc  cute_module.hh  fake_module.cc  fake_module.hh  influx_module.cc  influx_module.hh  module.cc  module_factory.cc  serial_module.cc  serial_module.hh
src/module/src/curses/: curse_logstream.cc  curse_logstream.hh  curse_module.cc  curse_window.cc  curse_window.hh
src/modules/: curse_logstream.cc  curse_module.cc  curse_window.cc  cute_module.cc  fake_module.cc  influx_module.cc  module.cc  module_factory.cc  serial_module.cc
src/modules/curses/: curse_logstream.cc  curse_logstream.h  curse_module.cc  curse_window.cc  curse_window.h
src/producers/: fake_producer.cc  producer.cc  producer_factory.cc  serial_producer.cc
src/proto/: CMakeLists.txt
src/proto/inc/proto/: delimited_protobuf_stream.hh  packet.hh
src/proto/src/: packet.cc
src/proto/tests/: test_packet.cc  test_stream.cc
src/protocol/: CMakeLists.txt
src/protocol/inc/protocol/: name.hh  protocol.hh
src/protocol/src/: name.cc  protocol.cc  protocol_parser.cc
src/protocol/tests/: test_protocol.cc
src/rocketsd/: CMakeLists.txt
src/rocketsd/app/: CMakeLists.txt  app.cc  app.hh  main.cc
src/rocketsd/module/: CMakeLists.txt  dumper_module.hh  fake_module.cc  fake_module.hh  influx_module.cc  influx_module.hh  message.hh  module.cc  module.hh  module_factory.cc  module_factory.hh  serial_module.cc  serial_module.hh
src/rocketsd/module/cute/: CMakeLists.txt  cute_module.cc  cute_module.hh  qt_socket_adapter.cc  qt_socket_adapter.hh
src/rocketsd/protocol/: CMakeLists.txt  name.cc  name.hh  protocol.cc  protocol_parser.cc  protocol_parser.hh
src/rocketsd/protocol/tests/: test_protocol.cc
src/rocketsd/src/: app.cc  app.hh  main.cc
src/shared/: CMakeLists.txt
src/util/: CMakeLists.txt  json.cc  switch.hh
src/util/inc/util/: json.hh  time.hh
src/util/src/: json.cc  switch.cc
src/util/tests/: main.cc  test_json.cc  test_switch.cc
tools/test/: serialcom.py
xmlprotoc/: compile.py  id.h  log.py  pretty.py  structure.py  util.py  validation.py  version.py  xmlprotoc.py
